# nome

./: Cargo.toml  Makefile  env.sh  te.toml
.github/workflows/: build.yml
nome/: Cargo.toml
nome-android/: Cargo.toml
nome-android/src/: lib.rs
nome/src/: lib.rs  main.rs
nome/src/interface/: mod.rs  nome_view.rs  tempo_control.rs
