[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2021"
name = "nome-android"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "nome"

[dependencies]
nome = { workspace = true }

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
min_sdk_version = 23
target_sdk_version = 29
